[gd_scene load_steps=5 format=3 uid="uid://7ygdm4ameglb"]

[ext_resource type="Theme" uid="uid://cpqqj8uayl3pq" path="res://Themes/Label.tres" id="1_hixa8"]
[ext_resource type="Script" uid="uid://1rv57854mprd" path="res://Scripts/Components/item_tooltip.gd" id="1_tiwhd"]
[ext_resource type="PackedScene" uid="uid://bj1txoqo06q6n" path="res://Scenes/Elements/stat_item.tscn" id="2_y7em6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tiwhd"]

[node name="ItemTooltip" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tiwhd")

[node name="Panel" type="Panel" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_right = 383.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_tiwhd")

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_right = 376.0
grow_vertical = 0
theme = ExtResource("1_hixa8")

[node name="MarginContainer" type="MarginContainer" parent="Panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 8

[node name="lblName" type="Label" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Item Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblDesc" type="RichTextLabel" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
bbcode_enabled = true
text = "This is where the description goes... And it can also be two lines"
fit_content = true
scroll_active = false
vertical_alignment = 1

[node name="statsGrid" type="GridContainer" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
columns = 4

[node name="StatItem" parent="Panel/PanelContainer/MarginContainer/VBoxContainer/statsGrid" instance=ExtResource("2_y7em6")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="StatItem2" parent="Panel/PanelContainer/MarginContainer/VBoxContainer/statsGrid" instance=ExtResource("2_y7em6")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="StatItem3" parent="Panel/PanelContainer/MarginContainer/VBoxContainer/statsGrid" instance=ExtResource("2_y7em6")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="StatItem4" parent="Panel/PanelContainer/MarginContainer/VBoxContainer/statsGrid" instance=ExtResource("2_y7em6")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="categoryGrid" type="GridContainer" parent="Panel/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0
columns = 3
